add TODO comment for using partials when they're ready

--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -15,7 +15,8 @@ The `authMiddleware()` helper integrates Clerk authentication into your Next.js 
 
 Because Clerk Next.js is a wrapper around Clerk React, you can utilize the hooks that Clerk React provides. These hooks give you access to the [`Clerk`](/docs/references/javascript/clerk/clerk) object, and a set of useful helper methods for signing in and signing up. You can learn more about these hooks [here](/docs/references/react/use-user).
 
-{/* Another option for copy. However, this list could be a debt problem; e.g. if we added more hooks in the future, this list would need to be updated as well.
+{/* Another option for copy. 
+TODO: We can use a partial here.
 
 Clerk provides several helpers for integrating authentication into your Next.js application's client-side code.
 
