update links that refer to helpers

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -26,7 +26,7 @@ By the end of this guide, you will have installed the following user functionali
 
 ### Install `@clerk/nextjs`
 
-Once you have a Next.js application ready, you need to install Clerk's Next.js SDK. This gives you access to prebuilt components and hooks, as well as our helpers for Next.js API routes, server-side rendering, and middleware.
+Once you have a Next.js application ready, you need to install Clerk's Next.js SDK. This gives you access to prebuilt components and hooks, as well as our [helpers](/docs/references/nextjs/overview) for Next.js API routes, server-side rendering, and middleware.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
   ```bash filename="terminal" copy
@@ -236,7 +236,7 @@ Now start your Next.js application via `npm run dev`, visit `http://localhost:30
 
 ## Read session and user data
 
-Clerk provides a set of hooks and helpers that you can use to access the active session and user data in your Next.js application. Here are examples of how to use these helpers in both the client and server side to get you started.
+Clerk provides a set of [hooks and helpers](/docs/references/react/use-user) that you can use to access the active session and user data in your Next.js application. Here are examples of how to use these helpers in both the client and server side to get you started.
 
 ### Client side
 
@@ -415,7 +415,7 @@ Now that your Next.js application is integrated with Clerk, you will want to rea
 
     <Cards title="Authentication Components" description="Learn more about all our authentication components." link="/docs/components/overview" cta="Learn More" />
 
-    <Cards title="Client Side Helpers" description="Learn more about our client side helpers and how to use them." link="/docs/references/react/use-auth" cta="Learn More" />
+    <Cards title="Client Side Helpers" description="Learn more about our client side helpers and how to use them." link="/docs/references/nextjs/overview#client-side-helpers" cta="Learn More" />
 
     <Cards title="Next.js SDK Reference" description="Learn more about additional Next.js methods." link="/docs/references/nextjs/overview" cta="Learn More" />
   </div>
