--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -202,7 +202,7 @@ export default App;
 
 ### Read session and user data
 
-Clerk provides a set of hooks and helpers that you can use to access the active session and user data in your React application. Here are examples of how to use these helpers.
+Clerk provides a set of [hooks and helpers](/docs/references/react/use-user) that you can use to access the active session and user data in your React application. Here are examples of how to use these helpers.
 
 #### `useAuth`
 
@@ -256,6 +256,6 @@ Now that you have an application integrated with Clerk, you will want to read th
 
     <Cards title="Authentication Components" description="Learn more about all our authentication components." link="/docs/components/authentication/sign-in" cta="Learn More" />
 
-    <Cards title="Client Side Helpers" description="Learn more about our client side helpers and how to use them." link="/docs/references/react/use-auth" cta="Learn More" />
+    <Cards title="Client Side Helpers" description="Learn more about our client side helpers and how to use them." link="/docs/references/react/use-user" cta="Learn More" />
   </div>
 </div>
