apply changes from code review

--- a/docs/references/javascript/clerk/redirect-methods.mdx
+++ b/docs/references/javascript/clerk/redirect-methods.mdx
@@ -61,7 +61,7 @@ Redirects to the sign-in URL, as configured in your Instance settings. This meth
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `options` | `[RedirectOptions](/docs/references/javascript/types/redirect-options) \| undefined` | Options to use in the redirect |
+| `options` | [`RedirectOptions`](/docs/references/javascript/types/redirect-options) \| `undefined` | Options to use in the redirect |
 
 ### Returns
 
