docs: editorial pass (#187)

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -3,24 +3,9 @@ title: Use Clerk with Next.js
 description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application. Clerk works seamlessly on both client side and server side components.
 ---
 
-import { Tab, Tabs } from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
-import { YouTube } from "@/components/Youtube";
-import {Cards} from "@/components/Cards";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-import { Images } from "@/components/Images";
-
 # Use Clerk with Next.js
 
 Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application. Clerk works seamlessly in both client side and server side components.
-
-By the end of this guide, you will have installed the following user functionality in your application:
-
-- Sign up
-- Sign in
-- Protect pages behind authentication
-- Manage account
-- Sign out
 
 <Steps>
 
@@ -75,7 +60,7 @@ export default function RootLayout({
   return (
     <ClerkProvider>
       <html lang="en">
-        <body className={inter.className}>{children}</body>
+        <body>{children}</body>
       </html>
     </ClerkProvider>
   )
@@ -304,11 +289,12 @@ export default function handler(req: NextApiRequest, res: NextApiResponse) {
 }
 ```
 
-In some cases, you may need the full [`User`](/docs/references/javascript/user/user) object. For example, if you want to access the user's email address or name. You can use the `clerkClient` helper to get the full `User` object.
+In some cases, you may need the full [`User`](/docs/references/javascript/user/user) object. For example, if you want to access the user's email address or name. You can use the [`clerkClient`](/docs/references/backend/overview) helper to get the full `User` object.
 
 
 ```tsx copy filename="pages/api/auth.ts"
-import { getAuth, clerkClient } from "@clerk/nextjs/server";
+import { clerkClient } from "@clerk/nextjs";
+import { getAuth } from "@clerk/nextjs/server";
 import type { NextApiRequest, NextApiResponse } from "next";
 
 export default async function handler(
@@ -391,7 +377,8 @@ export default async function handler(
     You can also access the full user object before passing it to the page using the `clerkClient` helper.
 
     ```tsx copy filename="pages/example.tsx"
-    import { clerkClient, getAuth, buildClerkProps } from "@clerk/nextjs/server";
+    import { clerkClient } from "@clerk/nextjs";
+    import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
     import { GetServerSideProps } from "next";
 
     export const getServerSideProps: GetServerSideProps = async (ctx) => {
