--- a/docs/references/javascript/clerk/create-organization.mdx
+++ b/docs/references/javascript/clerk/create-organization.mdx
@@ -3,10 +3,6 @@ title: <CreateOrganization /> Component
 description: The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within your application.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<CreateOrganization />` Component
 
 <Images alt="Create Organization Example" width={992} height={568} src="/docs/images/ui-components/component-org_create.svg" />
@@ -72,26 +68,10 @@ Render the `<CreateOrganization />` component to an HTML `<div>` element.
 function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizationProps): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "node",
-  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the {"<CreateOrganization />"} component</>
-  ],
-  },
-  {
-  cells: [
-  "props?",
-  <a href="#create-organization-props"><code>CreateOrganizationProps</code></a>,
-  "The properties to pass to the `<CreateOrganization />` component",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<CreateOrganization />` component |
+| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the `<CreateOrganization />` component |
 
 ## `unmountCreateOrganization`
 
@@ -152,19 +132,9 @@ Unmount and run cleanup on an existing `<CreateOrganization />` component instan
 function unmountCreateOrganization(node: HTMLDivElement): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "node",
-  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered {"<CreateOrganization />"} component instance</>
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<CreateOrganization />` component instance |
 
 ## `openCreateOrganization`
 
@@ -214,19 +184,9 @@ Opens the `<CreateOrganization />` component as an overlay at the root of your H
 function openCreateOrganization(props?: CreateOrganizationProps): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "props?",
-  <a href="#create-organization-props"><code>CreateOrganizationProps</code></a>,
-  "The properties to pass to the `<CreateOrganization />` component",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the `<CreateOrganization />` component |
 
 ## `closeCreateOrganization`
 
@@ -280,40 +240,9 @@ function closeCreateOrganization(): void;
 
 All props below are optional.
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>afterCreateOrganizationUrl</code>,
-  <code>string</code>,
-  "Full URL or path to navigate after creating a new organization.",
-  ],
-  },
-  {
-  cells: [
-  <code>path</code>,
-  <code>string</code>,
-  "The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing.",
-  ],
-  },
-  {
-  cells: [
-  <code>routing</code>,
-  <code>RoutingStrategy</code>,
-  `The routing strategy for your pages. Supported values are:
-  - hash (default): Hash based routing.
-  - path: Path based routing.
-  - virtual: Virtual based routing.`,
-  ],
-  },
-  {
-  cells: [
-  <code>appearance</code>,
-  <code>object</code>,
-  "Control the look and feel of the component.",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate after creating a new organization. |
+| `path` | `string` | The path where the component is mounted when path-based routing is used. -e.g. /create-org.<br />This prop is ignored in hash and virtual based routing. |
+| `routing` | `string` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li> <li>`virtual`: Virtual-based routing.</li></ul> |
+| `appearance` | `object` | Control the look and feel of the component. |
