--- a/docs/references/javascript/clerk/user-profile.mdx
+++ b/docs/references/javascript/clerk/user-profile.mdx
@@ -3,10 +3,6 @@ title: <UserProfile /> Component
 description: The <UserProfile /> component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<UserProfile />` Component
 
 <Images width={976} height={762} src="/docs/images/ui-components/component-user_profile.svg" alt="User Profile example" />
@@ -72,26 +68,10 @@ Render the `<UserProfile />` component to an HTML `<div>` element.
 function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "node",
-  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the {"<UserProfile />"} component</>
-  ],
-  },
-  {
-  cells: [
-  "props?",
-  <a href="#user-profile-props"><code>UserProfileProps</code></a>,
-  "The properties to pass to the `<UserProfile />` component",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<UserProfile />` component |
+| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the `<UserProfile />` component |
 
 ## `unmountUserProfile()`
 
@@ -152,19 +132,9 @@ Unmount and run cleanup on an existing `<UserProfile />` component instance.
 function unmountUserProfile(node: HTMLDivElement): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "node",
-  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered {"<UserProfile />"} component instance</>
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<UserProfile />` component instance. |
 
 ## `openUserProfile()`
 
@@ -214,19 +184,9 @@ Opens the `<UserProfile />` component as an overlay at the root of your HTML `bo
 function openUserProfile(props?: UserProfileProps): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "props?",
-  <a href="#user-profile-props"><code>UserProfileProps</code></a>,
-  "The properties to pass to the `<UserProfile />` component",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the `<UserProfile />` component |
 
 ## `closeUserProfile()`
 
@@ -280,37 +240,9 @@ function closeUserProfile(): void;
 
 All props below are optional.
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [<code>appearance</code>, <code>object</code>, `Controls the overall look and feel.`],
-  },
-  {
-  cells: [
-  <code>routing</code>,
-  <code>RoutingStrategy</code>,
-  `The routing strategy for your pages. Supported values are:
-  - Hash (default): Hash based routing.
-  - Path: Path based routing.`,
-  ],
-  },
-  {
-  cells: [
-  <code>path</code>,
-  <code>string</code>,
-  <>The path where the component is mounted when path-based routing is used.
-  <br/>e.g. <code>/user-profile</code>. This prop is ignored in hash-based routing.</>
-  ],
-  },
-  {
-  cells: [
-  <code>additionalOAuthScopes</code>,
-  <code>object</code>,
-  <>Specify additional scopes per OAuth provider that your users would like to provide if not already approved.
-  <br/>e.g. <code>{`{google: ['foo', 'bar'], github: ['qux']}`}</code></>
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `appearance` | `object` | Controls the overall look and feel. |
+| `routing` | `string` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li></ul> |
+| `path` | `string` | The path where the component is mounted when path-based routing is used.<br/>e.g. `/user-profile`.<br />This prop is ignored in hash-based routing. |
+| `additionalOAuthScopes` | `object` | Specify additional scopes per OAuth provider that your users would like to provide if not already approved.<br/>e.g. `{google: ['foo', 'bar'], github: ['qux']}` |
