--- a/docs/references/javascript/overview.mdx
+++ b/docs/references/javascript/overview.mdx
@@ -35,15 +35,19 @@ There are two ways you can include ClerkJS in your project. You can either [impo
 
 Once you have installed the package, you will need to import the ClerkJS object constructor into your code and pass it your [Frontend API](https://dashboard.clerk.com/last-active?path=api-keys) as a parameter.
 
+<InjectKeys>
+
 ```js
 import Clerk from '@clerk/clerk-js';
 
-const clerkFrontendApi = 'pk_[publishable_key]';
+const clerkFrontendApi = `pk_{{pub_key}}`;
 const clerk = new Clerk(clerkFrontendApi);
 await clerk.load({
   // Set load options here...
 });
 ```
+
+</InjectKeys>
 
 ### Install ClerkJS as script
 
