--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -3,11 +3,7 @@ title: Session
 description: The Session object is an abstraction over an HTTP session. It models the period of information exchange between a user and the server.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
-# Session
+# `Session`
 
 The `Session` object is an abstraction over an HTTP session. It models the period of information exchange between a user and the server.
 
@@ -106,7 +102,7 @@ function getToken(options?: GetTokenOptions): Promise<string | null>;
 
 Retrieves the user's session token for the given template or the default clerk token. This method uses a cache so a network request will only be made if the token in memory has expired. The TTL for clerk token is one minute.
 
-#### GetTokenOptions
+#### `GetTokenOptions`
 
 <Tables
   headings={["Name", "Type", "Description"]}
@@ -115,7 +111,7 @@ Retrieves the user's session token for the given template or the default clerk t
 {cells: [<code>leewayInSeconds</code>, <code>number</code>, <>The number of seconds that we allow the token to be cached.</>]},
 {cells: [<code>template?</code>, <code>string</code>, <>The name of the JWT template to generate a new token from.</>]},
 {cells: [<code>throwOnError?</code>, <code>boolean</code>, <>Whether to throw an error or return an empty string, if an error occurs.</>]},
-{cells: [<code>skipCache?</code>, <code>boolean</code>, <>Whether to skip the cache lookup and force a call to the server instead, even within the TTL. Useful if the token claims are time-sensitive or depend on data that can be updated (e.g. user fields). (default: false)</>]},
+{cells: [<code>skipCache?</code>, <code>boolean</code>, <>Whether to skip the cache lookup and force a call to the server instead, even within the TTL. Useful if the token claims are time-sensitive or depend on data that can be updated (e.g. user fields).<br />Defaults to `false`.</>]},
   ]}
 />
 
@@ -132,7 +128,7 @@ Retrieves the user's session token for the given template or the default clerk t
 
 ## Types
 
-### PublicUserData
+### `PublicUserData`
 
 
 <Tables
@@ -146,7 +142,7 @@ Retrieves the user's session token for the given template or the default clerk t
   ]}
 />
 
-### SessionStatus
+### `SessionStatus`
 
 ```typescript
 type SessionStatus = "abandoned" | "active" | "ended" | "expired" | "removed" | "replaced" | "revoked";
@@ -159,9 +155,9 @@ type SessionStatus = "abandoned" | "active" | "ended" | "expired" | "removed" | 
   rows={[
 {cells: [<code>abandoned</code>, <>The session was abandoned client-side.</>]},
 {cells: [<code>active</code>, <>The session is valid and all activity is allowed.</>]},
-{cells: [<code>ended</code>, <>The user signed out of the session, but the `Session` remains in the Client object.</>]},
+{cells: [<code>ended</code>, <>The user signed out of the session, but the <code>Session</code> remains in the <code>Client</code> object.</>]},
 {cells: [<code>expired</code>, <>The period of allowed activity for this session has passed.</>]},
-{cells: [<code>removed</code>, <>The user signed out of the session and the `Session` was removed from the Client object.</>]},
-{cells: [<code>replaced</code>, <>The session has been replaced by another one, but the `Session` remains in the Client object.</>]},
-{cells: [<code>revoked</code>, <>he application ended the session and the `Session` was removed from the Client object.</>]},  ]}
+{cells: [<code>removed</code>, <>The user signed out of the session and the <code>Session</code> was removed from the <code>Client</code> object.</>]},
+{cells: [<code>replaced</code>, <>The session has been replaced by another one, but the <code>Session</code> remains in the <code>Client</code> object.</>]},
+{cells: [<code>revoked</code>, <>The application ended the session and the <code>Session</code> was removed from the <code>Client</code> object.</>]},  ]}
 />
