--- a/docs/references/javascript/sign-up/verification.mdx
+++ b/docs/references/javascript/sign-up/verification.mdx
@@ -3,10 +3,6 @@ title: Verification
 description: These are all methods on the SignUp class that allow you to verify a user's sign-up request.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Verification
 
 These are all methods on [the `SignUp` class](/docs/references/javascript/sign-up/sign-up) that allow you to verify a user's sign-up request.
@@ -34,12 +30,12 @@ The `prepareVerification` is used to initiate the verification process for a fie
       <>
       The verification strategy to validate the user's sign-up request. The following strategies are supported:
       <ul>
-        <li><strong><code>phone_code</code></strong>: Send an SMS with a unique token to input.</li>
-        <li><strong><code>email_code</code></strong>: Send an email with a unique token to input.</li>
-        <li><strong><code>email_link</code></strong>: Send an email with a link which validates sign-up</li>
-        <li><strong><code>saml</code></strong>: Authenticate against SAML. Experimental</li>
-        <li><strong><code>oauth_*</code></strong>: Authenticate against <a href="/docs/authentication/social-connections/overview">various OAuth providers</a>.</li>
-        <li><strong><code>web3_*_signature</code></strong>: Authenticate against Web3 signatures.</li>
+        <li><code>phone_code</code>: Send an SMS with a unique token to input.</li>
+        <li><code>email_code</code>: Send an email with a unique token to input.</li>
+        <li><code>email_link</code>: Send an email with a link which validates sign-up</li>
+        <li><code>saml</code>: Authenticate against SAML. Experimental</li>
+        <li><code>oauth_*</code>: Authenticate against <a href="/docs/references/javascript/sign-in/authenticate-with#o-auth-strategy">various OAuth providers</a>.</li>
+        <li><code>web3_*_signature</code>: Authenticate against Web3 signatures.</li>
       </ul>
       </>
  ]},
@@ -75,9 +71,9 @@ Depending on the strategy, the method parameters could differ.
       <>
       The verification strategy to complete the user's sign-up request against. The following strategies are supported:
       <ul>
-        <li><strong><code>phone_code</code></strong>: Validates an SMS with a unique token to input.</li>
-        <li><strong><code>email_code</code></strong>: Validates an email with a unique token to input.</li>
-        <li><strong><code>web3_*_signature</code></strong>: Authenticate against Web3 signatures.</li>
+        <li><code>phone_code</code>: Validates an SMS with a unique token to input.</li>
+        <li><code>email_code</code>: Validates an email with a unique token to input.</li>
+        <li><code>web3_*_signature</code>: Authenticate against Web3 signatures.</li>
       </ul>
       </>
  ]},
