--- a/docs/authentication/social-connections/apple.mdx
+++ b/docs/authentication/social-connections/apple.mdx
@@ -11,7 +11,7 @@ How to set up social connection with Apple
 
 To make development flow as smooth as possible, Clerk uses pre-configured configuration profiles - steps are needed to your part (other than enabling the provider from Dashboard). For production instances, the process for Apple is a bit more complicated compared to other providers, but don't worry - Clerk provides step-by-step instructions to help guide you.
 
-> The purpose of this guide is to help you create an Apple App that can be used with Clerk's OAuth implementation, for the purpose of integrating your application with [Sign in with Apple](https://developer.apple.com/sign-in-with-apple/). If you're looking for step-by-step instructions using Clerk to add social connection (OAuth) to your application, follow the [Social connection (OAuth) guide](https://clerk.com/docs/authentication/social-connections-oauth).
+> The purpose of this guide is to help you create an Apple App that can be used with Clerk's OAuth implementation, for the purpose of integrating your application with [Sign in with Apple](https://developer.apple.com/sign-in-with-apple/). If you're looking for step-by-step instructions using Clerk to add social connection (OAuth) to your application, follow the [Social connection (OAuth) guide](/docs/authentication/social-connections/oauth).
 
 ## Before you start
 
@@ -181,4 +181,4 @@ Click **Save** and you should be good to go. Congratulations! Social connection 
 ## References
 
 - [Official Sign In with Apple documentation](https://developer.apple.com/documentation/sign_in_with_apple)
-- Social Connection (OAuth) with Clerk
+- [Social Connection (OAuth) with Clerk](/docs/authentication/social-connections/oauth)
