--- a/docs/references/javascript/clerk/build-urls.mdx
+++ b/docs/references/javascript/clerk/build-urls.mdx
@@ -3,10 +3,6 @@ title: Build URLs
 description: These are all methods on the Clerk class that help you manage URL creation on the Clerk dashboard configuration.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Build URLs
 
 These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that help you manage URL creation on the Clerk dashboard configuration.
@@ -21,54 +17,22 @@ Decorates the provided url with the auth token for development instances.
 
 ### Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  rows={[
-  {
-  cells: [
-  <code>to</code>,
-  <code>string</code>,
-  "The route to create a URL towards",
-  ],
-  },
-  {
-  cells: [
-  <code>options</code>,
-  <code><a href="#build-url-with-auth-params">BuildUrlWithAuthParams</a></code>,
-  "Options to apply toward the URL builder",
-  ],
-  }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `to` | `string` | The route to create a URL towards |
+| `options` | [`BuildUrlWithAuthParams`](#build-url-with-auth-params) | Options to apply toward the URL builder |
 
 ### `BuildUrlWithAuthParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  rows={[
-  {
-  cells: [
-  <code>useQueryParam</code>,
-  <code>boolean | null | undefined</code>,
-  "Controls if dev browser JWT is added as a query param",
-  ],
-  },
-  ]}
-/>
-
+| Name | Type | Description |
+| --- | --- | --- |
+| `useQueryParam` | `boolean` \| `null` \| `undefined` | Controls if dev browser JWT is added as a query param |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>string</code>,
-  <>The built URL decorated with the auth token.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `string` | The built URL decorated with the auth token |
 
 ## `buildSignInUrl()`
 
@@ -76,36 +40,19 @@ Decorates the provided url with the auth token for development instances.
 function buildSignInUrl(options?: RedirectOptions): string;
 ```
 
-Returns the configured url where <code><a href="/docs/references/javascript/clerk/sign-in">SignIn</a></code> is mounted or a custom sign-in page is rendered.
+Returns the configured url where [`SignIn`](/docs/references/javascript/clerk/sign-in) is mounted or a custom sign-in page is rendered.
 
 ### Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  rows={[
-  {
-  cells: [
-  <code>options</code>,
-  <code><a href="/docs/references/javascript/types/redirect-options">RedirectOptions</a> | undefined</code>,
-  "Options used to control the redirect in the constructed URL",
-  ],
-  }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `options` | [`RedirectOptions`](/docs/references/javascript/types/redirect-options) \| `undefined` | Options used to control the redirect in the constructed URL |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>string</code>,
-  <>The built sign-in URL</>,
-  ]},
-  ]}
-/>
-
+| Type | Description |
+| --- | --- |
+| `string` | The built sign-in URL |
 
 ## `buildSignUpUrl()`
 
@@ -117,31 +64,15 @@ Returns the configured url where <code><a href="/docs/references/javascript/cler
 
 ### Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  rows={[
-  {
-  cells: [
-  <code>options</code>,
-  <code><a href="/docs/references/javascript/types/redirect-options">RedirectOptions</a> | undefined</code>,
-  "Options used to control the redirect in the constructed URL",
-  ],
-  }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `options` | [`RedirectOptions`](/docs/references/javascript/types/redirect-options) \| `undefined` | Options used to control the redirect in the constructed URL |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>string</code>,
-  <>The built sign-up URL</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `string` | The built sign-up URL |
 
 ## `buildUserProfileUrl()`
 
@@ -153,16 +84,9 @@ Returns the url where <code><a href="/docs/references/javascript/clerk/user-prof
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>string</code>,
-  <>The url where <code><a href="/docs/references/javascript/clerk/user-profile">UserProfile</a></code> is mounted or a custom user-profile page is rendered.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `string` | The url where [`UserProfile`](/docs/references/javascript/clerk/user-profile) is mounted or a custom user-profile page is rendered. |
 
 ## `buildHomeUrl()`
 
@@ -174,17 +98,9 @@ Returns the url that you've configured in your app's Clerk dashboard.
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>string</code>,
-  <>The url that you've configured in your app's Clerk dashboard.</>,
-  ]},
-  ]}
-/>
-
+| Type | Description |
+| --- | --- |
+| `string` | The url that you've configured in your app's Clerk dashboard. |
 
 ## `buildCreateOrganizationUrl()`
 
@@ -196,17 +112,9 @@ Returns the configured url where <code><a href="/docs/references/javascript/cler
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>string</code>,
-  <>The configured url where <code><a href="/docs/references/javascript/clerk/create-organization">CreateOrganization</a></code> is mounted or a custom create-organization page is rendered.</>,
-  ]},
-  ]}
-/>
-
+| Type | Description |
+| --- | --- |
+| `string` | The configured url where [`CreateOrganization`](/docs/references/javascript/clerk/create-organization) is mounted or a custom create-organization page is rendered. |
 
 ## `buildOrganizationProfileUrl()`
 
@@ -218,13 +126,6 @@ Returns the configured url where <code><a href="/docs/references/javascript/cler
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>string</code>,
-  <>The configured url where <code><a href="/docs/references/javascript/clerk/organization-profile">OrganizationProfile</a></code> is mounted or a custom organization-profile page is rendered.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `string` | The configured url where [`OrganizationProfile`](/docs/references/javascript/clerk/organization-profile) is mounted or a custom organization-profile page is rendered. |
