--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -3,12 +3,7 @@ title: Clerk
 description: This is the main entrypoint class for the `@clerk/clerk-js` package. It contains a number of methods and properties for interacting with the Clerk API.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-import { ComponentPreviewCards } from "@/components/ComponentPreviewCards";
-
-# Clerk
+# `Clerk`
 
 This is the main entrypoint class for the `@clerk/clerk-js` package. It contains a number of methods and properties for interacting with the Clerk API.
 
@@ -28,7 +23,6 @@ This is the main entrypoint class for the `@clerk/clerk-js` package. It contains
   {cells: [ <code>session</code>, <code><a href="/docs/references/javascript/session">Session</a> | null | undefined</code>, <>The currently active <code><a href="/docs/references/javascript/session">Session</a></code>, which is guaranteed to be one of the sessions in <code>Client.sessions</code>. If there is no active session, this field will be <code>null</code>. If the session is loading, this field will be <code>undefined</code>.</>]},
   {cells: [ <code>user</code>, <code><a href="/docs/references/javascript/user/user">User</a> | null | undefined</code>, <>A shortcut to <code>Session.user</code> which holds the currently active <code>User</code> object. If the session is <code>null</code> or <code>undefined</code>, the user field will match.</>]},
   {cells: [ <code>organization</code>, <code><a href="/docs/references/javascript/organization/organization">Organization</a> | null | undefined</code>, <>A shortcut to the last active <code>Session.user.organizationMemberships</code> which holds an instance of a <code>Organization</code> object. If the session is <code>null</code> or <code>undefined</code>, the user field will match.</>]},
-  {cells: [ <code>frontendApi</code>, <code>string</code>, <>Clerk Frontend API string. <strong>This field is deprecated, use <code>publishableKey</code> instead.</strong></>]},
   {cells: [ <code>publishableKey</code>, <code>string | undefined</code>, <>Clerk Publishable Key string.</>]},
   ]}
 />
@@ -102,7 +96,7 @@ Only one of the two properties are allowed to be set at a time.
 function isReady(): boolean;
 ```
 
-Returns **true** when the [ClerkJS](/docs/references/javascript/overview) library has fully loaded and the `Clerk` object is ready for use, **false** otherwise.
+Returns `true` when the [ClerkJS](/docs/references/javascript/overview) library has fully loaded and the `Clerk` object is ready for use. Returns `false` otherwise.
 
 #### Returns
 
@@ -113,7 +107,7 @@ Returns **true** when the [ClerkJS](/docs/references/javascript/overview) librar
   rows={[
   {cells: [
   <code>{"boolean"}</code>,
-  <>This method will return <strong>true</strong> when the Clerk object is ready, <strong>false</strong> otherwise.</>,
+  <>This method will return <code>true</code> when the Clerk object is ready, <code>false</code> otherwise.</>,
   ]},
   ]}
 />
@@ -162,7 +156,7 @@ It is absolutely necessary to call this method before using the `Clerk` object i
   cells: [
   <code>polling</code>,
   <code>boolean | undefined</code>,
-  <>Dictates if we should poll against Clerk's backend every 5 minutes. Defaults to "true"</>,
+  <>Dictates if we should poll against Clerk's backend every 5 minutes. Defaults to <code>true</code></>,
   ],
   },
   {
@@ -176,7 +170,7 @@ It is absolutely necessary to call this method before using the `Clerk` object i
   cells: [
   <code>standardBrowser</code>,
   <code>boolean | undefined</code>,
-  <>Controls if ClerkJS will load with the standard browser set up using Clerk cookies. Defaults to "true"</>,
+  <>Controls if ClerkJS will load with the standard browser set up using Clerk cookies. Defaults to <code>true</code></>,
   ],
   },
   {
@@ -190,7 +184,7 @@ It is absolutely necessary to call this method before using the `Clerk` object i
   cells: [
   <code>touchSession</code>,
   <code>boolean | undefined</code>,
-  <>Indicates whether the session should be "touched" when user interactions occur, used to record these interactions. Defaults to "true"</>,
+  <>Indicates whether the session should be "touched" when user interactions occur, used to record these interactions. Defaults to <code>true</code></>,
   ],
   },
   {
@@ -225,14 +219,14 @@ It is absolutely necessary to call this method before using the `Clerk` object i
   cells: [
   <code>allowedRedirectOrigins</code>,
   <code>{"Array<string | RegExp> | undefined"}</code>,
-  <>Optional array of domains used to validate against the query param of an auth redirect.\n\nIf no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console.</>,
+  <>Optional array of domains used to validate against the query param of an auth redirect.<br />If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console.</>,
   ],
   },
   {
   cells: [
   <code>isInterstitial</code>,
   <code>boolean | undefined</code>,
-  <>Indicates that clerk.js is will be loaded from interstitial. Defaults to false</>,
+  <>Indicates that clerk.js is will be loaded from interstitial. Defaults to <code>false</code></>,
   ],
   },
   {
@@ -296,10 +290,11 @@ Registers a listener that triggers a callback whenever a change in the `Client`,
   ]}
 />
 
-> Please note that the `session` and `user` object have a special relationship that the type definition alone does not capture:
-> 
-> - When there is an active session, `user === session.user`. When there is no active session, `user`and `session` will both be **null**.
-> - When a session is loading, `user`and `session`will be **undefined**.
+<Callout>
+Please note that the `session` and `user` object have a special relationship that the type definition alone does not capture:
+- When there is an active session, `user === session.user`. When there is no active session, `user` and `session` will both be `null`.
+- When a session is loading, `user` and `session` will be `undefined`.
+</Callout>
 
 #### Returns
 
