--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -3,10 +3,6 @@ title: Organization Methods
 description: These are all methods on the Clerk class that allow you to create, modify, or read information about Organizations.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Organization Methods
 
 These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that allow you to create, modify, or read information about [Organizations](/docs/references/javascript/organization/organization).
@@ -22,34 +18,15 @@ The `getOrganization` method is used to get the information of an organization p
 
 ### Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>organizationId</code>,
-  <code>string</code>,
-  "The id of the organization to be found.",
-  ],
-  }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `organizationId` | `string` | The ID of the organization to be found. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}<a href="/docs/references/javascript/organization/organization">Organization</a> | undefined{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves to the requested <code><a href="/docs/references/javascript/organization/organization">Organization</a></code>.</>,
-  ]},
-  ]}
-/>
-
-
+| Type | Description |
+| --- | --- |
+| `Promise<Organization \| undefined>` | This method returns a `Promise` which resolves to the requested [`Organization`](/docs/references/javascript/organization/organization). |
 
 ## `createOrganization()`
 
@@ -61,39 +38,16 @@ The `createOrganization` method is used to create an organization programaticall
 
 ### Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>name</code>,
-  <code>string</code>,
-  "The name of the organization to be created.",
-  ],
-  },
-  {
-  cells: [
-  <code>slug?</code>,
-  <code>string</code>,
-  "The optional slug of the organization to be created.",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `name` | `string` | The name of the organization to be created. |
+| `slug?` | `string` | The optional slug of the organization to be created. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}<a href="/docs/references/javascript/organization/organization">Organization</a>{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves to the newly created <code><a href="/docs/references/javascript/organization/organization">Organization</a></code>.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<Organization>` | This method returns a `Promise` which resolves to the newly created [`Organization`](/docs/references/javascript/organization/organization). |
 
 ## `getOrganizationMemberships()`
 
@@ -101,18 +55,11 @@ The `createOrganization` method is used to create an organization programaticall
 function getOrganizationMemberships(): Promise<OrganizationMembership[]>;
 ```
 
-Get a list of all organizations your current user is a part of in the form of an array of <code><a href="/docs/references/javascript/organization-membership">OrganizationMembership</a></code>s.
+Get a list of all organizations your current user is a part of in the form of an array of [`OrganizationMembership`](/docs/references/javascript/organization-membership)s.
 
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}<a href="/docs/references/javascript/organization-membership">OrganizationMembership</a>[]{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves to the list of <code><a href="/docs/references/javascript/organization-membership">Organization</a></code>s for the current user.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<OrganizationMembership[]>` | This method returns a `Promise` which resolves to the list of [`OrganizationMembership`](/docs/references/javascript/organization-membership)s for the current user. |
