--- a/docs/references/javascript/clerk/organization-profile.mdx
+++ b/docs/references/javascript/clerk/organization-profile.mdx
@@ -3,10 +3,6 @@ title: <OrganizationProfile /> Component
 description: The <OrganizationProfile /> component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<OrganizationProfile />` Component
 
 <Images alt="Organization Profile Example" width={1024} height={548} src="/docs/images/ui-components/component-org_profile.svg" />
@@ -72,26 +68,10 @@ Render the `<OrganizationProfile />` component to an HTML `<div>` element.
 function mountOrganizationProfile(node: HTMLDivElement, props?: OrganizationProfileProps): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "node",
-  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the {"<OrganizationProfile />"} component</>
-  ],
-  },
-  {
-  cells: [
-  "props?",
-  <a href="#organization-profile-props"><code>OrganizationProfileProps</code></a>,
-  "The properties to pass to the `<OrganizationProfile />` component",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<OrganizationProfile />` component |
+| `props?` | [`OrganizationProfileProps`](#organization-profile-props) | The properties to pass to the `<OrganizationProfile />` component |
 
 ## `unmountOrganizationProfile()`
 
@@ -152,19 +132,9 @@ Unmount and run cleanup on an existing `<OrganizationProfile />` component insta
 function unmountOrganizationProfile(node: HTMLDivElement): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "node",
-  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered {"<OrganizationProfile />"} component instance</>
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<OrganizationProfile />` component instance. |
 
 ## `openOrganizationProfile()`
 
@@ -214,19 +184,9 @@ Opens the `<OrganizationProfile />` component as an overlay at the root of your 
 function openOrganizationProfile(props?: OrganizationProfileProps): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "props?",
-  <a href="#organization-profile-props"><code>OrganizationProfileProps</code></a>,
-  "The properties to pass to the `<OrganizationProfile />` component",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `props?` | [`OrganizationProfileProps`](#organization-profile-props) | The properties to pass to the `<OrganizationProfile />` component |
 
 ## `closeOrganizationProfile()`
 
@@ -280,40 +240,9 @@ function closeOrganizationProfile(): void;
 
 All props below are optional.
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>afterLeaveOrganizationUrl</code>,
-  <code>string</code>,
-  "Full URL or path to navigate after leaving an organization.",
-  ],
-  },
-  {
-  cells: [
-  <code>path</code>,
-  <code>string</code>,
-  "The path where the component is mounted when path-based routing is used. -e.g. /org-profile. This prop is ignored in hash and virtual based routing.",
-  ],
-  },
-  {
-  cells: [
-  <code>routing</code>,
-  <code>RoutingStrategy</code>,
-  `The routing strategy for your pages. Supported values are:
-  - hash (default): Hash based routing.
-  - path: Path based routing.
-  - virtual: Virtual based routing.`,
-  ],
-  },
-  {
-  cells: [
-  <code>appearance</code>,
-  <code>object</code>,
-  "Control the look and feel of the component.",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate after leaving an organization. |
+| `path` | `string` | The path where the component is mounted when path-based routing is used. -e.g. /org-profile.<br />This prop is ignored in hash and virtual based routing. |
+| `routing` | `string` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash based routing.</li> <li>`path`: Path based routing.</li> <li>`virtual`: Virtual based routing.</li></ul> |
+| `appearance` | `object` | Control the look and feel of the component. |
