--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -3,11 +3,6 @@ title: Session Methods
 description: These are all methods on the Clerk class that help you manage the active session and/or organization.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
-
 # Session Methods
 
 These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that help you manage the active session and/or organization.
@@ -27,48 +22,23 @@ Passing null as the session will result in the current session to be removed fro
 
 If an active session already exists, it will be replaced with the new one. The change happens in three steps:
 
-1. The current <a href="/docs/references/javascript/session">`Session`</a> object is set to **undefined**, which causes the control components to stop rendering their children as though Clerk is still initializing.
-2. The **beforeEmit** callback is executed. If a `Promise` is returned, Clerk waits for the `Promise` to resolve.
-3. The current <a href="/docs/references/javascript/session">`Session`</a> is set to the passed **session**. This causes the control components to render their children again.
+1. The current <a href="/docs/references/javascript/session">`Session`</a> object is set to `undefined`, which causes the control components to stop rendering their children as though Clerk is still initializing.
+2. The `beforeEmit` callback is executed. If a `Promise` is returned, Clerk waits for the `Promise` to resolve.
+3. The current <a href="/docs/references/javascript/session">`Session`</a> is set to the passed `session`. This causes the control components to render their children again.
 
 ### Props
 
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>session</code>,
-  <code><a href="/docs/references/javascript/session">Session</a> | string | null</code>,
-  <>A <code><a href="/docs/references/javascript/session">Session</a></code> object or <code>Session ID</code> string to be set as the current session, or <strong>null</strong> to simply remove the active session, without setting a new one.</>,
-  ],
-  },
-    {
-  cells: [
-  <code>beforeEmit?</code>,
-  <code>(session: <a href="/docs/references/javascript/session">Session</a> | null) {"=>"} Promise{"<any>"}</code>,
-  <>Callback that will trigger when the current session is set to <strong>undefined</strong>, before finally being set to the passed session. Usually used for navigation.</>,
-  ],
-  }
-  ]}
-/>
-
+| Name | Type | Description |
+| --- | --- | --- |
+| `session` | [`Session`](/docs/references/javascript/session) \| `string` \| `null` | A `Session` object or `Session ID` string to be set as the current session, or `null` to simply remove the active session, without setting a new one. |
+| `beforeEmit?` | `(session: Session \| null) => Promise<any>` | Callback that will trigger when the current session is set to `undefined`, before finally being set to the passed session. Usually used for navigation. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>{"Promise<void>"}</code>,
-  <>The <code>Promise</code> will resolve after the passed <code>session</code> is set.</>,
-  ]},
-  ]}
-/>
-
+| Type | Description |
+| --- | --- |
+| `Promise<void>` | The `Promise` will resolve after the passed `session` is set. |
 
 ## `setActive()`
 
@@ -80,52 +50,20 @@ function setActive({
 }: SetActiveParams): Promise<void>;
 ```
 
-An **experimental** method used to set the active session and/or organization.
+An experimental method used to set the active session and/or organization.
 
 > This method will eventually replace `setSession`.
 
 ### `SetActiveParams`
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>session</code>,
-  <code>Session | string | null</code>,
-  <>The session resource or session id (string version) to be set as active. If <code>null</code>, the current session is deleted.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>organization</code>,
-  <code><a href="/docs/references/javascript/organization/organization">Organization</a> | string | null</code>,
-  <>The organization resource or organization id (string version) to be set as active in the current session. If <code>null</code>, the currently active organization is removed as active.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>beforeEmit</code>,
-  <code>(session?: <a href="/docs/references/javascript/session">Session</a> | null) {"=> void | Promise<any>"}</code>,
-  <>Callback run just before the active session and/or organization is set to the passed object. Can be used to hook up for pre-navigation actions.</>,
-  ],
-  },
-  
-  ]}
-/>
-
+| Name | Type | Description |
+| --- | --- | --- |
+| `session` | `Session \| string \| null` | The session resource or session ID (string version) to be set as active. If `null`, the current session is deleted. |
+| `organization` | [`Organization`](/docs/references/javascript/organization/organization) \| `string` \| `null` | The organization resource or organization ID (string version) to be set as active in the current session. If `null`, the currently active organization is removed as active. |
+| `beforeEmit?` | `(session?: Session \| null) => void \| Promise<any>` | Callback run just before the active session and/or organization is set to the passed object. Can be used to hook up for pre-navigation actions. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>{"Promise<void>"}</code>,
-  <>The <code>Promise</code> will resolve after the passed <code>session</code> or <code>organization</code> is set.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<void>` | The `Promise` will resolve after the passed `session` or `organization` is set. |
