--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -3,11 +3,6 @@ title: <SignUp /> Component
 description: The <SignUp /> component renders a UI for signing up users. The functionality of the <SignUp /> component are controlled by the instance settings you specify in your Clerk Dashboard. You can further customize your SignUp component by passing additional properties at the time of rendering.
 ---
 
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<SignUp />` Component
 
 <Images width={496} height={780} src="/docs/images/ui-components/component-sign_up.svg" alt="Sign up component example" />
@@ -75,26 +70,10 @@ Render the `<SignUp />` component to an HTML `<div>` element.
 function mountSignUp(node: HTMLDivElement, props?: SignUpProps): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "node",
-  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the {"<SignUp />"} component</>
-  ],
-  },
-  {
-  cells: [
-  "props?",
-  <a href="#sign-up-props"><code>SignUpProps</code></a>,
-  "The properties to pass to the `<SignUp />` component",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `node ` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<SignUp />` component |
+| `props?` | [`SignUpProps`](#sign-up-props) | The properties to pass to the `<SignUp />` component |
 
 ## `unmountSignUp()`
 
@@ -155,19 +134,9 @@ Unmount and run cleanup on an existing `<SignUp />` component instance.
 function unmountSignUp(node: HTMLDivElement): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "node",
-  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered {"<SignUp />"} component instance</>
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `node ` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<SignUp />` component instance |
 
 ## `openSignUp()`
 
@@ -217,19 +186,9 @@ Opens the `<SignUp />` component as an overlay at the root of your HTML `body` e
 function openSignUp(props?: SignUpProps): void;
 ```
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "props?",
-  <a href="#sign-up-props"><code>SignUpProps</code></a>,
-  "The properties to pass to the `<SignUp />` component",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `props?` | [`SignUpProps`](#sign-up-props) | The properties to pass to the `<SignUp />` component |
 
 ## `closeSignUp()`
 
@@ -283,51 +242,11 @@ function closeSignUp(): void;
 
 All props below are optional.
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  "routing",
-  "string",
-  `The routing strategy for your pages. \nSupported values are: \n - hash (default): Hash-based routing. \n - path: Path-based routing. \n - virtual: Virtual-based routing.`,
-  ],
-  },
-  {
-  cells: [
-  "path",
-  "string",
-  "The path where the component is mounted on when path-based routing is used e.g. /sign-in.",
-  ],
-  },
-  {
-  cells: [
-  "redirectUrl",
-  "string",
-  "Full URL or path to navigate after successful sign in or sign up.\n The same as setting afterSignInUrl and afterSignUpUrl to the same value.",
-  ],
-  },
-  {
-  cells: [
-  "afterSignInUrl",
-  "string",
-  "The full URL or path to navigate after a successful sign in.",
-  ],
-  },
-  {
-  cells: [
-  "signInUrl",
-  "string",
-  "Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered.",
-  ],
-  },
-  {
-  cells: [
-  "afterSignUpUrl",
-  "string",
-  "The full URL or path to navigate after a successful sign up.",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `routing?` | `string` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li> <li>`virtual`: Virtual-based routing.</li></ul> |
+| `path?` | `string` | The path where the component is mounted on when path-based routing is used e.g. `/sign-in`. |
+| `redirectUrl?` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl?` | `string` | The full URL or path to navigate after a successful sign in. |
+| `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
+| `afterSignUpUrl?` | `string` | The full URL or path to navigate after a successful sign up. |
