--- a/docs/references/javascript/sign-in/authenticate-with.mdx
+++ b/docs/references/javascript/sign-in/authenticate-with.mdx
@@ -3,10 +3,6 @@ title: Authenticate With
 description: These are all methods on the SignIn class that allow you to authenticate with different methods.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Authenticate with
 
 These are all methods on [the `SignIn` class](/docs/references/javascript/sign-in/sign-in) that allow you to authenticate with different methods.
@@ -29,7 +25,7 @@ Signs in users via OAuth. This is commonly known as Single Sign On (SSO), where 
   rows={[{cells: [
         <code>strategy</code>,
         <code>string</code>,
-        <>The OAuth provider that will be used for singing in. Must be one of the supported <a href="#o-auth-strategy"><code>OAuthStrategy</code></a>.</>
+        <>The OAuth provider that will be used for signing in. Must be one of the supported <a href="#o-auth-strategy"><code>OAuthStrategy</code></a>.</>
     ]}, {cells: [
         <code>redirectUrl</code>,
         <code>string</code>,
@@ -139,7 +135,7 @@ type OAuthStrategy = |
 "oauth_notion";
 ```
 
-The OAuth provider that will be used for singing in. Must be one of the supported OAuthStrategy.
+The OAuth provider that will be used for signing in. Must be one of the supported OAuthStrategy.
 
 <Tables
   headings={['Name', 'Type', 'Description']}
