--- a/docs/references/react/use-session.mdx
+++ b/docs/references/react/use-session.mdx
@@ -65,30 +65,9 @@ export default function Home() {
 ```
 </CodeBlockTabs>
 
-<Tables
-  headings={["Variables", "Description"]}
-  headingsMeta={[{}, {maxWidth:'300px'}]}
-  rows={[
-    {
-      cells: [
-        "isLoaded",
-        "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true",
-      ],
-    },
-    {
-      cells: [
-        "setActive",
-        "A function that sets the active session, is most cases this should be used over setSession()",
-      ],
-    },
-    {
-      cells: [
-        "setSession",
-        "A function that sets the active session, this should",
-      ],
-    },
-    {
-      cells: ["session", "Holds the current active session for the user"],
-    },
-  ]}
-/>
+| Values | Description |
+| --- | --- |
+| `isLoaded` | A boolean that is set to false until Clerk loads and initializes. |
+| `setActive()` | A function that sets the active session. In most cases, this should be used over `setSession()`. |
+| `setSession()` | A function that sets the active session. |
+| `session` | Holds the current active session for the user. |
