--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -173,21 +173,9 @@ The `useSignIn` hook provides access to the `SignIn` object, which allows you to
   </Tab>
 </Tabs>
 
-<Tables
-  headings={["Variables", "Description"]}
-  headingsMeta={[{}, {maxWidth:'300px'}]}
-  rows={[
-  {
-  cells: ["isLoaded", "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true"]
-  },
-  {
-  cells: ["setActive", "A function that sets the active session, is most cases this should be used over setSession()"]
-  },
-  {
-  cells: ["setSession", "A function that sets the active session, this should"]
-  },
-  {
-  cells: ["signIn", "An object that contains the current sign in attempt status and methods to create a new sign in attempt."]
-  },
-  ]}
-/>
+| Values | Description |
+| --- | --- |
+| `isLoaded` | A boolean that is set to false until Clerk loads and initializes. |
+| `setActive()` | A function that sets the active session. In most cases, this should be used over `setSession()`. |
+| `setSession()` | A function that sets the active session. |
+| `signIn` | An object that contains the current sign in attempt status and methods to create a new sign in attempt. |
