update authentication overview content and links

--- a/docs/authentication/overview.mdx
+++ b/docs/authentication/overview.mdx
@@ -1,5 +1,62 @@
 ---
-sanity_slug: /docs/authentication/overview
+title: Sign-up & Sign-in
+description: Learn how to configure authentication and user management for your Clerk application.
 ---
 
-# This is a stub
+# Sign-up & Sign-in
+
+## Configuration
+
+Clerk's configuration settings affect how the users of your application can sign up and sign in and which attributes are editable via their user profile. You can find these settings under the **User & Authentication** section in your [Clerk Dashboard](https://dashboard.clerk.dev/).
+
+Check out our detailed guide for information on [how to set up your application](/docs/authentication/set-up-your-application).
+
+## Custom Flows
+
+Clerk provides the flexibility to create [custom sign-up and sign-in flows](/docs/custom-flows/overview) for your application. Below are some of the most common flows that you can implement with Clerk.
+
+[Email & Password](/docs/custom-flows/email-password)
+
+With this setup, users that come to your website will need to supply an authorized email and password to gain access to their account.
+
+[Email / SMS OTP](/docs/custom-flows/email-sms-otp)
+
+During sign-in, users will enter their identifier (email address or phone number) to receive a one-time code and complete the authentication process.
+
+[Magic Links](/docs/custom-flows/magic-links)
+
+During login or registration, users will enter their email address to receive an email message with a link that can be clicked and complete the authentication process.
+
+[Multifactor](/docs/custom-flows/mfa)
+
+By enabling multifactor authentication (MFA), often referred to as two-factor authentication or 2FA, you can encourage or require your users to perform a second verification check during sign-in.
+
+[Social Login Providers](/docs/authentication/social-connections/overview)
+
+Clerk offers a list of Social Login providers that can be used during sign-up and sign-in. There will be a button on the sign-in and sign-up pages with the provider's logo and the appropriate text for each of the selected providers.
+
+Don't see the provider you need? Request others [here](https://clerk.com/support); we can usually add them within a week.
+
+## Frameworks
+
+Integrate Clerk with popular frameworks to get user management and authentication for your application in minutes.
+
+<div className="container mx-auto my-4">
+    <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+      <FrameworkCards title="React" description="Get started installing and initializing Clerk in a new Create React App." link="/docs/quickstarts/react" cta="Get Started" icon="/docs/images/logos/react.svg" />
+
+      <FrameworkCards title="Next.js" description="Easily add secure, beautiful, and fast authentication to Next.js with Clerk." link="/docs/quickstarts/nextjs" cta="Get Started" icon="/docs/images/logos/nextjs.svg" iconWidth="40" />
+
+      <FrameworkCards title="JavaScript" description="Add authentication and user management to your JavaScript application." link="/docs/quickstarts/javascript" cta="Get started" hideArrow={true} icon="/docs/images/logos/javascript.svg" iconWidth="30" />
+
+      <FrameworkCards title="Remix" description="Easily add secure, edge- and SSR-friendly authentication to Remix with Clerk." link="/docs/quickstarts/remix" cta="Get Started" icon="/docs/images/logos/remix.svg" />
+
+      <FrameworkCards title="Gatsby" description="Integrate user management and authentication into your Gatsby application." link="/docs/quickstarts/gatsby" cta="Get Started" hideArrow={true} icon="/docs/images/logos/gatsby.svg" />
+
+      <FrameworkCards title="RedwoodJS" description="Grow your RedwoodJS application with Clerk user management and authentication." link="/docs/quickstarts/redwood" cta="Get Started" icon="/docs/images/logos/redwood.svg" />
+
+      <FrameworkCards title="Expo / React Native" description="Use Clerk with Expo to authenticate users in your React Native application." link="/docs/quickstarts/expo" cta="Get Started" icon="/docs/images/logos/expo.svg" />
+
+      <FrameworkCards title="Fastify" description="Learn about installing and initializing Clerk in a new Fastify application." link="/docs/quickstarts/fastify" cta="Get Started" icon="/docs/images/logos/fastify.svg" iconWidth="40" />
+    </div>
+  </div>
